--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<div class="container-sm bg-primary-subtle rounded">
+    <nav class="navbar navbar-expand-lg bg-primary-subtle">
+        <div class="container-fluid d-flex justify-content-center align-items-center">
+            <a class="navbar-brand mb-0 h1 text-center" href="#">Fun For Nerds</a>
+        </div>
+    </nav>
+</div>
