word-input component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div>
   <div lass="d-flex flex-column gap-2">
     <app-navbar></app-navbar>
+    <app-word-input></app-word-input>
   </div>
 </div>
