app-component style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div lass="d-flex flex-column gap-2">
+<div class="d-flex justify-content-center align-items-center p-5">
+  <div class="d-flex flex-column row-gap-4">
     <app-navbar></app-navbar>
     <app-word-input></app-word-input>
   </div>
