--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="d-flex justify-content-center align-items-center p-5">
-  <div class="d-flex flex-column row-gap-4">
-    <app-navbar></app-navbar>
-    <app-word-input></app-word-input>
+  <div class="col-12 col-md-10 col-lg-10"> <!-- Set width to 80% for medium and large screens -->
+    <div class="d-flex flex-column mb-3 gap-2">
+        <app-navbar></app-navbar>
+        <app-word-input></app-word-input>
+    </div>
   </div>
 </div>
