--- a/src/app/components/word-input/word-input.component.html
+++ b/src/app/components/word-input/word-input.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
-    <form class="d-flex" role="search">
+    <form class="d-flex " role="search" (submit)="onSubmit()">
       <input 
         class="form-control me-2" 
         type="search" 
         placeholder="write your word" 
         aria-label="Search" (input)="onUserInput($event)">
-      <button class="btn btn-outline-success" type="submit">Submit</button>
+      <button class="btn btn-outline-success" (click)="onSubmit()">Submit</button>
     </form>
   </div>
